# esp32p4

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/drivers/audio/: audio_init.c  audio_init.h
main/drivers/lvgl/: display.h  lvgl_init.c  lvgl_init.h
main/drivers/mcpwm/: mcpwm.c  mcpwm.h
main/drivers/mpu6050/: mpu6050.c  mpu6050.h
main/drivers/ws2812/: ws2812.c  ws2812.h
